# time-since-date

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
lib/: mylib.h
src/: README.md.in  a.out  app_utils.c  app_utils.h  main.c  makefile  time_conversion.c  time_conversion.h  utils.c  utils.h
src/time_conversion/: time_conversion.c  time_conversion.h
src/utils/: app_utils.c  app_utils.h  version.h  version.h.in
src/utils/time_conversion/: time_conversion.h
src/utils/validate_input/: validate_input.h
src/validate_input/: validate_input.c  validate_input.h
